fixed image size on mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -45,7 +45,7 @@ h2 {
 }
 
 img {
-    max-width: 500px;
+    max-width: 360px;
     width: auto;
     height: auto;
     margin: 5px;
